Fixed: card spacing

--- a/_sass/simple-academic/_style.scss
+++ b/_sass/simple-academic/_style.scss
@@ -59,7 +59,7 @@
   padding: 0 30px;
   max-width: 350px;
   @media only screen and (min-width: 750px) {
-    margin: 30px 0 30px 30px;
+    margin: 30px 0 30px auto;
     padding: 0;
   }
 }
@@ -153,7 +153,7 @@
     width: 17rem;
     min-width: 17rem;
     height: 18rem;
-    margin-bottom: 0;
+    margin: 0 auto;
   }
 
   img {
